// Copyright 2024-2025 CardinalHQ, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package chqpb;

option go_package = ".;chqpb";


message ServiceLogCountProto {
  string service_name = 1;
  string namespace_name = 2;
  string cluster_name = 3;
  string tid = 4;
  int64 interval = 5;

  map<int64, int64> countsByFingerprint = 11;
  map<int64, int32> levelByFingerprint = 12;
}

// Wrapper for a list of log counts to emit in a single batch
message ServiceLogCountList {
  repeated ServiceLogCountProto sketches = 1;
  string customer_id = 2;
}